[gd_scene load_steps=9 format=3 uid="uid://cwdmtqbybucq1"]

[ext_resource type="PackedScene" uid="uid://ddty2wgvpl3jm" path="res://Scenes/projectile.tscn" id="1_r1rg3"]
[ext_resource type="Script" uid="uid://bldtxj3i722xr" path="res://Scripts/srm.gd" id="2_1ql8x"]
[ext_resource type="PackedScene" uid="uid://cn25vrrfdwenv" path="res://Scenes/explosion_1.tscn" id="3_dympo"]
[ext_resource type="Texture2D" uid="uid://d0300gf38t6ms" path="res://Sprites/smoke_cards3.png" id="4_dympo"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dympo"]

[sub_resource type="Curve" id="Curve_7fqiw"]
_data = [Vector2(0, 0), 0.0, 2.4925911, 0, 0, Vector2(1, 0.84787476), 1.433902, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_87apo"]
offsets = PackedFloat32Array(0, 0.07777778, 0.17222223, 0.2888889, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0.07999998, 0.5568628, 0.29, 0.29, 0.29, 0.14509805, 0.14767182, 0.14767182, 0.14767176, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_1ql8x"]
radius = 77.05842

[node name="SRM" instance=ExtResource("1_r1rg3")]
z_index = 1
script = ExtResource("2_1ql8x")
turn_speed = 7
life = 80.0
speed = 10.0
damage = 4.0
heat = 2.0
impact_effect = ExtResource("3_dympo")

[node name="sprite" parent="." index="0"]
position = Vector2(0, -1)
hframes = 1
region_rect = Rect2(32, 70, 16, 5)

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(0, 0)

[node name="smoke4" type="CPUParticles2D" parent="." index="2"]
material = SubResource("ShaderMaterial_dympo")
position = Vector2(0.50000024, 7)
amount = 50
texture = ExtResource("4_dympo")
lifetime = 3.5
speed_scale = 2.0
draw_order = 1
emission_shape = 3
emission_rect_extents = Vector2(1.375, 2.855)
direction = Vector2(0, 1)
spread = 23.72
gravity = Vector2(0, 0)
damping_min = 20.0
damping_max = 20.0
angle_min = -180.0
angle_max = 168.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_7fqiw")

[node name="smoke3" type="CPUParticles2D" parent="." index="3"]
material = SubResource("ShaderMaterial_dympo")
amount = 50
lifetime = 0.3
speed_scale = 2.0
randomness = 0.5
draw_order = 1
emission_shape = 3
emission_rect_extents = Vector2(1.375, 2.855)
direction = Vector2(0, 1)
spread = 20.48
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 60.0
damping_min = 20.0
damping_max = 20.0
angle_min = -180.0
angle_max = 168.0
scale_amount_min = 3.0
scale_amount_max = 15.0
scale_amount_curve = SubResource("Curve_7fqiw")
color_ramp = SubResource("Gradient_87apo")

[node name="Area2D" type="Area2D" parent="." index="4" groups=["sensor"]]
collision_mask = 3
monitorable = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D" index="0"]
position = Vector2(0, -56)
shape = SubResource("CircleShape2D_1ql8x")

[connection signal="area_entered" from="." to="." method="_on_impact"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
